KakaoFriendsResponseVO 내부 클래스 통합